# cocapn-glue-core

./: README.md  __main__.py  glue_core.py  pyproject.toml  test_integration.py
.github/workflows/: ci.yml
rust/: Cargo.toml
rust/src/: lib.rs
