[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cocapn-glue-core"
version = "1.0.0"
description = "Cocapn Fleet module — cocapn-glue-core"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["cocapn", "fleet"]

[project.scripts]
cocapn_glue_core = "glue_core:main"
